# WetReverb

./: .gitignore  LICENSE  README.md  build.bat  build.sh  install.bat  install.sh  vst3sdk
.github/workflows/: release.yml  test-build.yml
WetReverb/: CMakeLists.txt
WetReverb/resource/: wetreverbeditor.uidesc  win32resource.rc
WetReverb/source/: buttonledindicator.cpp  buttonledindicator.h  buttonselectionframe.cpp  buttonselectionframe.h  customviewcreator.cpp  customviewcreator.h  ledmeterview.cpp  ledmeterview.h  reverbbuffer.cpp  reverbbuffer.h  version.h  wetreverbcids.h  wetreverbcontroller.cpp  wetreverbcontroller.h  wetreverbentry.cpp  wetreverbprocessor.cpp  wetreverbprocessor.h
scripts/: merge-vst3.sh
